# jamespot_user_ui

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
e2e/: login.spec.ts
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/api/: jamespot.test.ts  jamespot.ts
src/components/: Dashboard.test.tsx  Dashboard.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  LoginScreen.tsx
src/context/: AuthContext.tsx
src/test/: TestProvider.tsx
