[package]
name = "jamespot-user-ui"
version = "0.1.0"
edition = "2021"
description = "Jamespot User UI Desktop Application"
authors = ["you"]
license = "MIT"
repository = "https://github.com/hadrienblanc/jamespot_user_ui"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
strip = true
lto = true
